# COMTool

./: README.md  README_zh.md  build.sh  docker-cmd.sh  pyproject.toml
.github/workflows/: main.yml
src/comtool/: __about__.py  __main__.py
src/comtool/widgets/: formatted_text_area.py
